Bind the drop-down lists to the model.

--- a/ClientApp/app/components/vehicle-form/vehicle-form.component.html
+++ b/ClientApp/app/components/vehicle-form/vehicle-form.component.html
@@ -1,25 +1,28 @@
 <h1>New Vehicle</h1>
+<p>
+  {{ vehicle | json }}
+</p>
 <form>
   <div class="form-group">
     <label for="make">Make</label>
-    <select id="make" class="form-control" (change)="onMakeChange()" [(ngModel)]="vehicle.make" name="make">
+    <select id="make" class="form-control" (change)="onMakeChange()" [(ngModel)]="vehicle.makeId" name="makeId">
       <option value=""></option>
       <option *ngFor="let m of makes" value="{{ m.id }}">{{ m.name }}</option>
     </select>
   </div>
   <div class="form-group">
     <label for="model">Model</label>
-    <select id="model" class="form-control">
+    <select id="model" class="form-control" [(ngModel)]="vehicle.modelId" name="modelId">
       <option value=""></option>
       <option *ngFor="let m of models" value="{{ m.id }}">{{ m.name }}</option>
     </select>
   </div>
   <p>Is this vehicle registered?</p>
   <label for="registered" class="radio-inline">
-    <input type="radio" name="isRegistered" id="registered" value="true"> Yes
+    <input type="radio" name="isRegistered" id="registered" value="true" [(ngModel)]="vehicle.isRegistered"> Yes
   </label>
   <label for="notRegistered" class="radio-inline">
-    <input type="radio" name="isRegistered" id="notRegistered" value="false"> No
+    <input type="radio" name="isRegistered" id="notRegistered" value="false" [(ngModel)]="vehicle.isRegistered"> No
   </label>
   <h2>Features</h2>
   <div *ngFor="let f of features" class="checkbox">
