--- a/ClientApp/app/components/vehicle-form/vehicle-form.component.html
+++ b/ClientApp/app/components/vehicle-form/vehicle-form.component.html
@@ -2,7 +2,7 @@
 <p>
   {{ vehicle | json }}
 </p>
-<form #f="ngForm" (ngSubmit)="submit()">
+<form #f="ngForm" (ngSubmit)="submit()" novalidate>
   <div class="form-group">
     <label for="make">Make</label>
     <select id="make" class="form-control" (change)="onMakeChange()" [(ngModel)]="vehicle.makeId" name="makeId" required #make="ngModel">
@@ -47,5 +47,5 @@
     <label for="contactEmail">Email</label>
     <input id="contactEmail" type="text" class="form-control" [(ngModel)]="vehicle.contact.email" name="contactEmail">
   </div>
-  <button class="btn btn-primary" [disabled]="!f.valid">Save</button>
+  <button class="btn btn-primary">Save</button>
 </form>
