--- a/ClientApp/app/components/vehicle-list/vehicle-list.html
+++ b/ClientApp/app/components/vehicle-list/vehicle-list.html
@@ -2,12 +2,15 @@
 <p>
   <a [routerLink]="['/vehicles/new']" class="btn btn-primary">New Vehicle</a>
 </p>
-<div class="form-group well">
-  <label for="make">Make</label>
-  <select id="make" class="form-control" [(ngModel)]="filter.makeId" (change)="onFilterChange()">
-    <option value=""></option>
-    <option *ngFor="let m of makes" value="{{ m.id }}">{{ m.name }}</option>
-  </select>
+<div class="well">
+  <div class="form-group">
+    <label for="make">Make</label>
+    <select id="make" class="form-control" [(ngModel)]="filter.makeId" (change)="onFilterChange()">
+      <option value=""></option>
+      <option *ngFor="let m of makes" value="{{ m.id }}">{{ m.name }}</option>
+    </select>
+  </div>
+  <button class="btn btn-default" (click)="resetFilter()">Reset</button>
 </div>
 <table class="table">
   <thead>
