Render columns dynamically.

--- a/ClientApp/app/components/vehicle-list/vehicle-list.html
+++ b/ClientApp/app/components/vehicle-list/vehicle-list.html
@@ -15,18 +15,19 @@
 <table class="table">
   <thead>
     <tr>
-      <th>Id</th>
-      <th (click)="sortBy('make')">
-        Make
-        <i *ngIf="query.sortBy === 'make'" 
-          class="fa"
-          [class.fa-sort-asc]="query.isSortAscending"
-          [class.fa-sort-desc]="!query.isSortAscending"
-        ></i>
+      <th *ngFor="let c of columns">
+        <div *ngIf="c.isSortable" (click)="sortBy(c.key)">
+          {{ c.title }}
+          <i *ngIf="query.sortBy === c.key" 
+            class="fa"
+            [class.fa-sort-asc]="query.isSortAscending"
+            [class.fa-sort-desc]="!query.isSortAscending"
+          ></i>
+        </div>
+        <div *ngIf="!c.isSortable">
+          {{ c.title }}
+        </div>
       </th>
-      <th (click)="sortBy('model')">Model</th>
-      <th (click)="sortBy('contactName')">Contact Name</th>
-      <th></th>
     </tr>
   </thead>
   <tbody>
