Render the uploaded photos.

--- a/ClientApp/app/components/view-vehicle/view-vehicle.html
+++ b/ClientApp/app/components/view-vehicle/view-vehicle.html
@@ -38,6 +38,7 @@
     <div role="tabpanel" class="tab-pane" id="photos">
       <h2>Photos</h2>
       <input type="file" (change)="uploadPhoto()" #fileInput> 
+      <img *ngFor="let photo of photos" src="/uploads/{{ photo.fileName }}" class="img-thumbnail">
     </div>
   </div>
 </div>
