Add bootstrap progress bar.

--- a/ClientApp/app/components/view-vehicle/view-vehicle.html
+++ b/ClientApp/app/components/view-vehicle/view-vehicle.html
@@ -38,6 +38,11 @@
     <div role="tabpanel" class="tab-pane" id="photos">
       <h2>Photos</h2>
       <input type="file" (change)="uploadPhoto()" #fileInput> 
+      <div class="progress" *ngIf="progress && progress.percentage < 100">
+        <div class="progress-bar" [style.width]="progress.percentage + '%'">
+          <span class="sr-only">{{ progress.percentage }}% Complete</span>
+        </div>
+      </div>
       <img *ngFor="let photo of photos" src="/uploads/{{ photo.fileName }}" class="img-thumbnail">
     </div>
   </div>
